--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "frontend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "packagr":"ng-packagr -p projects/my-library/ng-package.json",
+    "build:lib":"ng-packagr -p projects/my-library/ng-package.json",
+    "pack": " cd projects/my-library/ng-package.json && npm pack"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
